Arrow up button

--- a/index.html
+++ b/index.html
@@ -303,6 +303,10 @@
         <p class="contact__rights">2020 Dream Coding Hanul - All rights reserved</p>
     </section>
 
+    <div class="btn__go__top">
+        <span>⬆</span>
+    </div>
+
     <script src="index.js"></script>
 </body>
 </html>
