--- a/index.html
+++ b/index.html
@@ -303,9 +303,10 @@
         <p class="contact__rights">2020 Dream Coding Hanul - All rights reserved</p>
     </section>
 
-    <div class="btn__go__top">
-        <span>⬆</span>
-    </div>
+    <!-- Arrow up -->
+    <button class="arrow-up">
+        <i class="fa-solid fa-arrow-up"></i>
+    </button>
 
     <script src="index.js"></script>
 </body>
