--- a/index.html
+++ b/index.html
@@ -196,62 +196,62 @@
             <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
-            <button class="category__btn active" data-work-category="all">All <span class="category__count">8</span></button>
-            <button class="category__btn" data-work-category="frontend">Front-end <span class="category__count">3</span></button>
-            <button class="category__btn" data-work-category="backend">Back-end <span class="category__count">3</span></button>
-            <button class="category__btn" data-work-category="mobile">Mobile <span class="category__count">2</span></button>
+            <button class="category__btn" data-filter="*">All <span class="category__count">8</span></button>
+            <button class="category__btn" data-filter="frontend">Front-end <span class="category__count">3</span></button>
+            <button class="category__btn" data-filter="backend">Back-end <span class="category__count">3</span></button>
+            <button class="category__btn" data-filter="mobile">Mobile <span class="category__count">2</span></button>
         </div>
         <div class="work__projects">
-            <a href="" class="project" data-work="frontend">
+            <a href="" class="project" data-type="frontend">
                 <img src="imgs/projects/youtube.png" alt="Youtube" class="project__img">
                 <div class="project__description">
                     <h3>Youtube Site</h3>
                     <span>Clone coding with HTML, CSS</span>
                 </div>
             </a>
-            <a href="" class="project" data-work="frontend">
+            <a href="" class="project" data-type="frontend">
                 <img src="imgs/projects/navbar.png" alt="navbar" class="project__img">
                 <div class="project__description">
                     <h3>Responsive Navbar</h3>
                     <span>HTML, CSS with media query</span>
                 </div>
             </a>
-            <a href="" class="project" data-work="frontend">
+            <a href="" class="project" data-type="frontend">
                 <img src="imgs/projects/youtube.png" alt="ShoppingMall" class="project__img">
                 <div class="project__description">
                     <h3>Shopping mall game</h3>
                     <span>HTML, CSS, JavaScript, Json</span>
                 </div>
             </a>
-            <a href="" class="project" data-work="backend">
+            <a href="" class="project" data-type="backend">
                 <img src="imgs/projects/game.png" class="project__img">
                 <div class="project__description">
                     <h3>Project</h3>
                     <span>Explanation</span>
                 </div>
             </a>
-            <a href="" class="project" data-work="backend">
+            <a href="" class="project" data-type="backend">
                 <img src="imgs/projects/game.png" class="project__img">
                 <div class="project__description">
                     <h3>Project</h3>
                     <span>Explanation</span>
                 </div>
             </a>
-            <a href="" class="project" data-work="backend">
+            <a href="" class="project" data-type="backend">
                 <img src="imgs/projects/game.png" class="project__img">
                 <div class="project__description">
                     <h3>Project</h3>
                     <span>Explanation</span>
                 </div>
             </a>
-            <a href="" class="project" data-work="mobile">
+            <a href="" class="project" data-type="mobile">
                 <img src="imgs/projects/game.png" class="project__img">
                 <div class="project__description">
                     <h3>Project</h3>
                     <span>Explanation</span>
                 </div>
             </a>
-            <a href="" class="project" data-work="mobile">
+            <a href="" class="project" data-type="mobile">
                 <img src="imgs/projects/game.png" class="project__img">
                 <div class="project__description">
                     <h3>Project</h3>
